--- a/StudentProject/MainWindow.xaml
+++ b/StudentProject/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="Diák adatok" Height="480" Width="800">
     <Window.DataContext>
-        <viewmodel:StudentViewModel/>
+        <viewmodel:StudentViewModel></viewmodel:StudentViewModel>
     </Window.DataContext>
     <Grid Margin="5 5 5 5">
         <Grid.ColumnDefinitions>
